--- a/index.html
+++ b/index.html
@@ -6,29 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <style>
+        html, body {
+            height: 100%;
+        }
+        body {
+            display: grid;
+            place-items: center;
+        }
+        .text-red {
+            color: red;
+        }
+        .text-green {
+            color: green;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
-        <p>
-            <input type="text" v-model="greeting">
-        </p>
-        <p>
-            {{ greeting }} ({{ greeting.length }})
-        </p>
+      <button v-bind:class="active ? 'text-red' : 'text-green'" @click="toggle">Click Me</button>
     </div>
    <script>
     Vue.createApp({
-        data() {
-            return {
-                greeting: 'Hello World',
-            };
-        },
+       data() {
+        return {
+            buttonClass: 'text-green',
+            active: true,
+        };
+       },
 
-        mounted() {
-            setTimeout(() => {
-                this.greeting = 'change'
-            }, 3000);
-        },
+       methods:{ 
+            toggle() {
+                this.active = ! this.active
+            }
+       }
     }).mount('#app');
    </script>
 </body>
