--- a/index.html
+++ b/index.html
@@ -1,46 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>List and Computed Properties</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <style>
-        html, body {
-            height: 100%;
-        }
-        body {
-            display: grid;
-            place-items: center;
-        }
-        .text-red {
-            color: red;
-        }
-        .text-green {
-            color: green;
-        }
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="h-full grid place-items-center">
     <div id="app">
-      <button v-bind:class="active ? 'text-red' : 'text-green'" @click="toggle">Click Me</button>
+      <section v-show="InProgressAssignment.length">
+        <h1 class="font-bold mb-2">In Progress</h1>
+        <ul>
+            <li v-for="assignment in InProgressAssignment"> 
+
+                <label>
+                    {{ assignment.name }}
+                    <input type="checkbox" v-model="assignment.complete">
+                </label>
+            </li>
+         
+        </ul>
+      </section>
+      <section v-show="CompletedAssignment.length" class="mt-8">
+        <h1 class="font-bold mb-2">Completed Assignments</h1>
+        <ul>
+            <li v-for="assignment in assignments.filter(a => a.complete) " :key="assignment.id"> 
+
+                <label>
+                    {{ assignment.name }}
+                    <input type="checkbox" v-model="assignment.complete" :key="assignment.id">
+                </label>
+            </li>
+         
+        </ul>
+      </section>
     </div>
    <script>
-    Vue.createApp({
-       data() {
-        return {
-            buttonClass: 'text-green',
-            active: true,
-        };
-       },
-
-       methods:{ 
-            toggle() {
-                this.active = ! this.active
+    let app = {
+        data() {
+            return {
+                assignments: [
+                    { name: 'Finish Project', complete: false, id:1},
+                    { name: 'Read Chapter', complete: false, id:2},
+                    { name: 'Turn in Homework', complete: false, id:3}
+                ]
             }
-       }
-    }).mount('#app');
+        },
+
+        computed: {
+            InProgressAssignment() {
+                return this.assignments.filter(assignment=> ! assignment.complete);
+            },
+
+            CompletedAssignment() {
+                return this.assignments.filter(assignment=>assignment.complete);
+            }
+        }
+    }
+    Vue.createApp(app).mount('#app');
    </script>
 </body>
 </html>
